# async-safe-defer

./: Cargo.toml  README.md
src/: lib.rs
